# Drosben

./: .gitignore  LICENSE  MANIFEST.in  README.md  conda-lock.yml  environment.yml  environment_pinned.yml  pyproject.toml
hardware/: README.md
hardware/3D_models/: README.md
hardware/3D_models/Depositor/: Depositor.3mf  Depositor.FCStd  Depositor.step  Depositor.stl
hardware/3D_models/Lid/: Lid.3mf  Lid.FCStd  Lid.stl  Lid.stp
hardware/3D_models/Multiflipper/: multiflipper.3mf  multiflipper.FCStd  multiflipper.stl  multiflipper.stp
hardware/3D_models/Rack/: Rack.3mf  Rack.FCStd  Rack.stl  Rack.stp
hardware/3D_models/Slider/: Slider.3mf  Slider.FCStd  Slider.stl  Slider.stp
hardware/3D_models/Utilities/: Depositor_stencil  Depositor_stencil.3mf  Depositor_stencil.FCStd  Depositor_stencil.stl  tube_cutter_reference.3mf  tube_cutter_reference.FCStd  tube_cutter_reference.step  tube_cutter_reference.stl
notebooks/: 01_First_Use_Colour_Calibration.html  01_First_Use_Colour_Calibration.ipynb  02_Initialise_Experiment.html  02_Initialise_Experiment.ipynb  04_Analyse_Data.Rmd  04_Analyse_Data.html  Analyse_Data.Rmd  Lifespan_Analysis.R
scripts/: 01_First_Use_Colour_Calibration.py  02_Initialise_Experiment_from_Excel.py
src/drosben/: __init__.py  config.py
src/drosben/experiment/: info.py  manager.py
src/drosben/image/: __init__.py  colourcal.py  process.py  utils.py
src/drosben/resources/: experiment_template.xlsx
src/drosben/stats/: stats.py
tests/: test_fake_experiment.py  test_resources.py
tests/data/: ColourConfig_RGB_EpsonXP342.pkl  ColourConfig_RGB_Xerox.pkl  ColourConfig_YPLB_Xerox.pkl  experiment_sample.xlsx
